# paracomp

./: README.md
001-ode-cauchy/: .gitignore  lab-ode-cauchy.md
001-ode-cauchy/code/picard/: .gitignore  CMakeLists.txt  generate.c  generate.h  main.c  matrices.c  matrices.h  matrix_tools.c  picard.c  picard.h  study.c  study.h
001-ode-cauchy/code/picard/analysis/: plots.ipynb
001-ode-cauchy/code/picard/results/: diff.csv  efficiency_vs_threads.csv  norm.csv  speedup_vs_threads.csv  time_vs_size.csv  time_vs_threads.csv
001-ode-cauchy/code/picard/src/: CMakeLists.txt  generate.c  generate.h  main.c  matrix_tools.c  matrix_tools.h  picard.c  picard.h  study.c  study.h
001-ode-cauchy/report/: .gitignore
001-ode-cauchy/report/report/: config.tex  content.tex  main.tex
002-dirichlet-poisson/: .gitignore  lab-dirichlet-poisson.md
002-dirichlet-poisson/analysis/: plots.ipynb
002-dirichlet-poisson/code/: .gitignore
002-dirichlet-poisson/code/src/: .gitignore  CMakeLists.txt  commands.txt  def.h  functions.c  functions.h  main.c  notes.txt  seidel.c  seidel.h  study.c  study.h  test.c  test.h  tools.c  tools.h
002-dirichlet-poisson/code/src/results/: notes.txt  scaling_data.csv  solution.csv  time_on_nodes.csv  time_vs_grid.csv
002-dirichlet-poisson/report/: README.md  content.tex  structure.txt
002-dirichlet-poisson/report/report/: .gitignore  config.tex  content.tex
002-dirichlet-poisson/tests/: README.md
003-ns-heattransfer/: lab-ns-heattransfer.md
004-img-proc/: lab-img-proc.md  lab004-img-proc.md
004-img-proc/code/: README.md
(+6 files in other folders)
